[package]
name = "rusty-mvt"
version = "0.1.0"
edition = "2021"
description = "A lightweight server for Mapbox Vector Tiles, implemented in Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain="0.12.4"
axum="0.6.20"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
dotenv_codegen = "0.15.0"
axum-macros = "0.3.8"
anyhow = {version = "1.0.75", features = ["backtrace"]}
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "json" ] }
lazy_static = "1.4.0"
dotenv = "0.15.0"
prost = "0.12.1"
geojson = "0.24.1"
geo-types = "0.7.11"
unit-conversions = "0.1.13"
phf = "0.11.2"
speedicycle = {path = "../speedicycle/"}
tower-http = { version = "0.4.4", features = ["cors", "timeout"] }
tower = { version = "0.4.13", features = ["timeout"] }

[build-dependencies]
phf = "0.11.2"
phf_codegen = "0.11.2"
serde_json = "1.0.105"
